css/templates.css
/* ... */
/* Testimonial 2 */
.testimonial-2{
	padding-top: 7rem;
	padding-bottom: 7rem;
}
.testimonial-2 h6{
	margin-bottom: 1rem;
	font-size: 1.3rem;
	text-transform: uppercase;
}
.testimonial-2 .brief{
	height: 100%;
	border-right: 1px solid #ddd;
	display: table;
}
.testimonial-2 .brief p:last-child{
	margin-bottom: 0;
}
.testimonial-2 .brief-inner{
	display: table-cell;
	vertical-align: middle;
}
.testimonial-2 blockquote{
	width: 100%;
	padding: 0;
	margin-bottom: 3rem;
}
.testimonial-2 blockquote:last-child{
	margin-bottom: 0;
}
.testimonial-2 cite{
	text-transform: uppercase;
	font-weight: bold;
	font-style: normal;
	letter-spacing: 0.1rem;
}

/* Testimonial 3 */
.testimonial-3{
	padding-top: 7rem;
	padding-bottom: 4rem;
}
.testimonial-3 h6{
	margin-bottom: 4rem;
	font-size: 1.3rem;
	text-transform: uppercase;
}
.testimonial-3 blockquote{
	width: 100%;
	padding: 0;
	margin: 0;
}
.testimonial-3 cite{
	text-transform: uppercase;
	letter-spacing: 0.1rem;
}

/* Testimonial 4 */
.testimonial-4{
	padding-top: 7rem;
	padding-bottom: 4rem;
}
.testimonial-4 h6{
	margin-bottom: 4rem;
	font-size: 1.3rem;
	text-transform: uppercase;
}
.testimonial-4 blockquote{
	height: 100%;
	padding: 2.5rem;
	margin: 0;
	border-radius: 0.3rem;
	border: 1px solid #ddd;
}
.testimonial-4 cite{
	text-transform: uppercase;
	letter-spacing: 0.1rem;
}

/* Testimonial 5 */
.testimonial-5{
	padding-top: 4rem;
	padding-bottom: 7rem;
	color: #fff;
	background-image:url(../images/slider/slide-2-fs-hp.jpg);
	background-repeat: no-repeat;
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	position: relative;
}
.testimonial-5 .testimonial-slider{
	height: 35rem;
	margin-bottom: 0;
	background: none;
}
.testimonial-5 blockquote{
	width: 60%;
	margin: auto;
	float: none;
}
.testimonial-5 cite{
	text-transform: uppercase;
	font-weight: bold;
	font-style: normal;
	letter-spacing: 0.1rem;
}
.testimonial-5 .testimonial-slider .tms-pagination{
	bottom: 0;
}

/* Testimonial Media Queries */
@media only screen and (max-width: 960px){
	.testimonial-1 p,
	.testimonial-5 .testimonial-slider p{
		font-size: 1.9rem;
		line-height: 2.9rem;
	}
}
@media only screen and (max-width: 768px){
	.testimonial-2 .brief{
		border-right: none;
	}
	.testimonial-2 .brief h6:last-child,
	.testimonial-2 .brief p:last-child{
		margin-bottom: 3rem;
	}
	.testimonial-3 blockquote{
		height: 100%;
		padding-bottom: 3rem;
		border-bottom: 1px solid #ddd;
	}
	.testimonial-3 .grid-item:last-child blockquote{
		padding-bottom: 0;
		margin-bottom: 0;
		border-bottom: none;
	}
}
@media
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (   min--moz-device-pixel-ratio: 2),
only screen and (     -o-min-device-pixel-ratio: 2/1),
only screen and (		 min-device-pixel-ratio: 2),
only screen and (			min-resolution: 192dpi),
only screen and (				min-resolution: 2dppx) {
	.testimonial-5{
		background-image:url(../images/slider/slide-2-fs-hp@2x.jpg);
	}
}

/*------------------------------------------------------------------
[12. Team Sections]
*/
[class*="team-"] .signature{
	width: 100%;
}

/* Team 1 */
.team-1{
	padding-top: 7rem;
	padding-bottom: 4rem;
}
.team-1 .team-content-info h2{
	margin-bottom: 3rem;
}
.team-1 .team-content-info h5{
	margin-top: 2rem;
	margin-bottom: 0;
}
.team-1 h6.occupation{
	margin-top: 0;
	margin-bottom: 2rem;
	text-transform: uppercase;
	font-size: 1.2rem;
	color: #999;
	letter-spacing: 0.1rem;
}
.team-1 .social-list a{
	display: inline-block;
	margin-right: 1rem;
}

/* Team 2 */
.team-2{
	padding-top: 7rem;
	padding-bottom: 4rem;
	background: #f4f4f4;
}
.team-2 .team-content{
	background: #fff;
}
.team-2 .team-content-info{
	padding: 2rem;
}
.team-2 .team-content-info h2{
	margin-bottom: 3rem;
}
.team-2 .team-content-info h5{
	margin-top: 1rem;
	margin-bottom: 0;
}
.team-2 h6.occupation{
	margin-top: 0;
	margin-bottom: 2rem;
	text-transform: uppercase;
	font-size: 1.2rem;
	color: #999;
	letter-spacing: 0.1rem;
}
.team-2 .social-list .list-label{
	margin-right: 1rem;
	font-size: 1rem;
	font-weight: bold;
	color: #999;
	text-transform: uppercase;
	display: inline-block;
}
.team-2 .social-list a{
	display: inline-block;
	margin-right: 1rem;
}
.team-2 .social-list.boxed{
	margin: 0 -2rem -2rem -2rem;
	padding: 2rem;
	background: #e7e7e7;
}

/* Team 3 */
.team-3{
	background-image:url(../images/team/page-01-bg.jpg);
	background-repeat: no-repeat;
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	position: relative;
}
.team-3{
	padding-top: 7rem;
	padding-bottom: 7rem;
	color: #fff;
	text-align: left;
}
.team-3 .slider-column{
	padding-left: 0;
	padding-right: 0;
}
.team-3 .team-slider{
	height: 45rem;
	margin-bottom: 0;
	background: none;
}
.team-3 .team-slider .tms-slides{
	margin-bottom: 2rem;
}
.team-3 .team-slider li{
	padding-left: 1.5rem;
	padding-right: 1.5rem;
}
.team-3 .team-slider .tms-pagination{
	padding-left: 1.5rem;
	padding-right: 1.5rem;
	bottom: 0;
}
.team-3 .team-content{
	margin-bottom: 4rem;
}
.team-3 .team-content-info{
	color: #fff;
}
.team-3 .team-content-info h2{
	margin-bottom: 3rem;
}
.team-3 .team-content-info h5{
	margin-top: 2rem;
	margin-bottom: 0;
	color: #fff;
}
.team-3 h6.occupation{
	margin-top: 0;
	margin-bottom: 2rem;
	text-transform: uppercase;
	font-size: 1.2rem;
	color: #999;
	letter-spacing: 0.1rem;
}
.team-3 .social-list a{
	color: #fff;
	display: inline-block;
	margin-right: 1rem;
}
.team-3 .social-list a:hover{
	opacity: 0.5;
}

/* Team 4 */
.team-4{
	padding-top: 7rem;
	padding-bottom: 0;
	text-align: center;
	overflow: hidden;
}
.team-4 .grid-item{
	margin-bottom: 0;
}
.team-4 .thumbnail{
	margin-bottom: 0;
}
.team-4 .overlay-info > span{
	padding: 3rem;
	font-size: 1.4rem;
	line-height: 1.8;
	font-weight: normal;
}
.team-4 .team-content-info h5{
	margin-top: 2rem;
	margin-bottom: 0;
}
/* ... */

